Fixed incorrect positioning of help dialogs on mobile

--- a/widgets/_lhfs.scss
+++ b/widgets/_lhfs.scss
@@ -404,3 +404,24 @@ ul.horizontal {
   }
 
 }
+
+//
+// Media queries
+// --------------------------------------------------
+
+
+@include breakpoint($brk-mobile){
+
+    .help {
+      &.dialog {
+        right: 2%;
+      }
+
+      &:before {
+      }
+
+      &:after {
+        left: 88% !important;
+      }
+    }
+  }
